--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "monolog/monolog": "^2.2",
         "filp/whoops": "^2.9",
         "phpfastcache/phpfastcache": "^8.0",
-        "dompdf/dompdf": "*"
+        "dompdf/dompdf": "*",
+        "verot/class.upload.php": "^2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
